<resources>
    <string name="app_name">GoscamDemoPro</string>
    <string name="account_input_format">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@-_.</string>
    <string name="password_input_format">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="sign_up_input_phone_number_or_email">Mobile number/Email address</string>
    <string name="input_password">Please enter your password</string>
    <string name="input_password_again">Please enter your password again</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">Quick registration</string>
    <string name="username_format_error_tip">Username format is incorrect</string>
    <string name="password_format_error_tip">The password format is incorrect</string>
    <string name="play_load_ing">Loading &#8230;</string>
    <string name="verification_code">Verification code</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="register">Register</string>
    <string name="account_format_error_tip">Account format error</string>
    <string name="send_verify_code_success_tip">The verification code has been sent to your binding %1$s\n (%2$s), which is valid for 10 minutes</string>
    <string name="register_successfully">Register successfully</string>
    <string name="sign_up_input_password_again_error_tip">Inconsistent password input before and after</string>
    <string name="list">List</string>
    <string name="developing">developing</string>
    <string name="message_dev_empty">No device yet</string>
    <string name="connect">Connect</string>
    <string name="start_audio">Start audio</string>
    <string name="stop_audio">Stop audio</string>
    <string name="start_video">Start video</string>
    <string name="stop_video">Stop video</string>
    <string name="start_talk">Start talk</string>
    <string name="stop_talk">Stop talk</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="capture">Capture</string>
    <string name="next">Next</string>
    <string name="enter_wifi_ssid">Enter WiFi SSID</string>
    <string name="enter_wifi_psw">Enter WiFi PSW</string>
    <string name="add_device">Add Device</string>
    <string name="qr_scan_notice">Scan the code with your phone，after the camera indicator flashing red</string>
    <string name="juli_scan">10 cm to 20 cm distance</string>
    <string name="add_connect">Connecting</string>
    <string name="add_connect_wait">It takes 1~2 minutes to connect, please be patient</string>
    <string name="connect_success">Connection successful</string>
    <string name="setting">Setting</string>
    <string name="modify_dev_name">Modify device alias</string>
    <string name="common_setting">Common Setting</string>
    <string name="dev_share">Friend sharing</string>
    <string name="delete_dev">Delete device</string>
    <string name="move_motion">Motion detection</string>
    <string name="pir_detection">PIR detection</string>
    <string name="time_j">Camera time verification</string>
    <string name="night_switch">Night vision</string>
    <string name="tf_info">TF info</string>
    <string name="led_switch">Led switch</string>
    <string name="camera_switch">Camera switch</string>
    <string name="mic_switch">Mic switch</string>
    <string name="sure_delete">Are you sure you want to delete the device?</string>
    <string name="enter_dev_name">Please enter device name</string>
    <string name="modify">modify</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="share">share</string>
    <string name="shared_list">Device Shared List</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="auto">Auto</string>
    <string name="time_setting_reset_time_intro">The time on the camera\'s real-time screen is taken from the network. If you find that the time on the camera is not the same as the time of the mobile phone, please correct the camera time.</string>
    <string name="setting_clock_begin">Start verification</string>
    <string name="setting_ling_ming_du">Motion sensitivity</string>
    <string name="devinfo_format_sdcard">Format SD card</string>
    <string name="total_space">Total space:</string>
    <string name="used_space">Used space:</string>
    <string name="unused_space">Unused space:</string>
    <string name="tf_status">Tf status:</string>
    <string name="save">save</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="high">High</string>
    <string name="default_">default</string>
    <string name="low">Low</string>
    <string name="jian_ce_qu_yue">Detection area</string>
    <string name="no_video_data">No video data</string>
    <string name="no_sd_title">Your camera has not yet inserted a memory card</string>
    <string name="list_failed">File list failed</string>
    <string name="record_file">Record files</string>
    <string name="alarm_file">Alarm files</string>
    <string name="ft_download_parser">Mode 1: download file into MP4 file</string>
    <string name="start_download">Start download</string>
    <string name="ft_file_play">Mode 2: similar to real-time playback, play TF files</string>
    <string name="start_play">Start play</string>
    <string name="stop_play">Stop play</string>
    <string name="get_preview">Get preview</string>
    <string name="day_time">Day time</string>
    <string name="file_play">File play</string>
    <string name="cloud_play_expiration_of_cloud_storage_service_tip">The cloud storage service of the current device has expired. If you want to continue using it, please renew the service.</string>
    <string name="error_code_80001">Json string parsing error</string>
    <string name="cloud_play_not_purchase_cloud_service_tip">The current device does not have cloud storage enabled</string>
    <string name="to_mp_file">Convert to MP4 file</string>
    <string name="modify_user_psw">Modify user password</string>
    <string name="logout">Logout</string>
    <string name="exit_tip">Press again to exit the program</string>
    <string name="exit_account">Log out of current account?</string>
    <string name="enter_old_psw">Please enter the old password</string>
    <string name="enter_new_psw">Please enter a new password</string>
    <string name="enter_new_psw_again">Please enter your new password again</string>
    <string name="modify_tag_notice">Password format\: length between 8 and 16 characters, contain at least two of the numbers, uppercase letters, and lowercase letters</string>
    <string name="value_empty">Value empty</string>
    <string name="modify_success">Modify success</string>
    <string name="forget_user_password">Forget user password</string>
    <string name="dev_soft_update">Dev soft update</string>
    <string name="update">Update</string>
    <string name="update_to">Can be updated to \</string>
    <string name="next_time">Next time</string>
    <string name="update_now">Update</string>
    <string name="update_download_soft">The camera application firmware is about to be upgraded. It takes about 4&#8211;5 minutes (related to the network speed); please make sure that the camera does not power off during this process!</string>
    <string name="new_down_loading">Downloading&#8230;</string>
    <string name="config_cancel">Cancel</string>
    <string name="upgrade_failed">Upgrade failed, error: %1$s</string>
    <string name="update_success">After the download is successful, the camera will automatically restart to upgrade, please be patient</string>
    <string name="yes">determine</string>
    <string name="init">init</string>
    <string name="uninit">uninit</string>
    <string name="reconnect">reconnect</string>
    <string name="websocket">WebSocket</string>
    <string name="open_doorbell">Open the doorbell </string>
    <string name="connect_wifi">Connect router</string>
    <string name="open_dev">Turn on the wifi station</string>
    <string name="add_ipc">Add Ipc</string>
    <string name="add_doorbell">Add Doorbell</string>
    <string name="voice_notice_help">1. Please make sure that the mobile phone is as close as possible to the wifi station;2. Please increase the volume of the mobile phone and keep the surrounding environment as quiet as possible;3. Make sure that the WiFi password you enter is correct</string>
    <string name="send_voice">Send sound waves</string>
    <string name="next_step_notice">Next</string>
    <string name="bell_light">The red light is not flashing?</string>
    <string name="request_failed">Request failed</string>
    <string name="voice_pei">Sound wave configuration network</string>
    <string name="no_hear_">Did not hear "received successfully"</string>
    <string name="i_know">I see</string>
    <string name="connect_time_out">Connection timed out</string>
    <string name="alarm_push">Alarm Push</string>
    <string name="wake_plan">wake plan</string>
    <string name="device_restart_plan">Device restart plan</string>
    <string name="tf_card_manual_recording">TF card manual recording</string>
    <string name="video_image_flip">video image flip</string>
    <string name="status_indicator">Status indicator</string>
    <string name="intercom_volume_setting">Intercom volume setting</string>
    <string name="sound_detection">Sound Detection</string>
    <string name="sound_and_light_linkage">Sound and light linkage</string>
    <string name="object_tracking">Object Tracking</string>
    <string name="reboot_the_device">Reboot the device</string>
    <string name="smart_night_vision">Smart night vision</string>
    <string name="_10s">10s</string>
    <string name="_30s">30s</string>
    <string name="_60s">60s</string>
    <string name="humanoid_detection">Humanoid detection</string>
    <string name="string_ringtone_reminder">Ringtone reminder</string>
    <string name="string_light_reminder">Light reminder</string>
    <string name="string_vibration_reminder">Vibration reminder</string>
    <string name="string_ringtone">Ringtone</string>
    <string name="string_light_color">Light color</string>
    <string name="string_light_effects">Lighting effects</string>
    <string name="music">Music</string>
    <string name="string_sleep_monitor">Sleep monitoring</string>
    <string name="string_boundary">Electronic fence</string>
    <string name="detection_sensitivity">detection sensitivity</string>
    <string name="string_ai_placation">Intelligent comfort</string>
    <string name="cry_detection">Crying detection</string>
    <string name="cry_detection_title">After activation, detect the baby\'s crying and alert with an alarm</string>
    <string name="string_night_light">The night light soothes</string>
    <string name="string_night_light_title">After activation, turn on the night light when the baby cries</string>
    <string name="string_musical_comfort">Music soothes</string>
    <string name="string_musical_comfort_title">After activation, play corresponding music when the baby cries</string>
    <string name="string_select_music">Choose soothing music</string>
    <string name="string_comfort_time">Comfort period</string>
    <string name="string_comfort_time_title">After setting, only pacify during that time period</string>
    <string name="light">Lights always on</string>
    <string name="string_ai_setting">AI mode</string>
    <string name="string_privacy_occlusion">Privacy occlusion</string>
    <string name="string_support_off">Not enabled</string>
    <string name="string_shelter_monitor">Face Covering Detection</string>
    <string name="string_wake_up">Awakening detection</string>
    <string name="string_sleep_quality">Sleep quality monitoring</string>
    <string name="tv_play_music">Play</string>
    <string name="tv_play_up">Up</string>
    <string name="tv_play_next">Next</string>
</resources>