<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar"/>

        <com.gocam.goscamdemopro.utils.ItemViewForSetting
            android:id="@+id/item_sleep"
            style="@style/dev_setting_main_"
            app:i_left_txt="@string/string_sleep_monitor"
            android:layout_marginTop="@dimen/w_20px"
            app:i_right_image_show="false"
            app:i_switch_btn_show="true"
            android:visibility="visible" />

        <com.gocam.goscamdemopro.utils.ItemViewForSetting
            android:id="@+id/item_shelter"
            style="@style/dev_setting_main_"
            app:i_left_txt="@string/string_shelter_monitor"
            app:i_right_image="@mipmap/icon_more"
            app:i_right_txt="@string/string_support_off"
            app:i_right_txt_show="true"
            app:i_top_line="true" />

        <com.gocam.goscamdemopro.utils.ItemViewForSetting
            android:id="@+id/item_wake_up"
            style="@style/dev_setting_main_"
            app:i_left_txt="@string/string_wake_up"
            app:i_right_image="@mipmap/icon_more"
            app:i_right_txt="@string/string_support_off"
            app:i_right_txt_show="true"
            app:i_top_line="true" />

        <com.gocam.goscamdemopro.utils.ItemViewForSetting
            android:id="@+id/item_sleep_quality"
            style="@style/dev_setting_main_"
            android:visibility="visible"
            app:i_left_txt="@string/string_sleep_quality"
            app:i_right_image_show="false"
            app:i_switch_btn_show="true"
            app:i_top_line="true" />
    </LinearLayout>
</layout>