<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" android:id="@+id/tool_bar" />

        <Button
            android:id="@+id/btn_play"
            style="@style/style_setting_item"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_play_music"
            />

        <Button
            android:id="@+id/btn_up"
            style="@style/style_setting_item"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_play_up"
            />

        <Button
            android:id="@+id/btn_next"
            style="@style/style_setting_item"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_play_next"
            />

    </LinearLayout>
</layout>