<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <RadioGroup
        android:id="@+id/radio_group_flash_interval"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/_10s"
            android:id="@+id/radio_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/_30s"
            android:id="@+id/radio_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/_60s"
            android:id="@+id/radio_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </RadioGroup>






</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>